[package]
name = "chess_bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
# bevy = { version = "0.11.0", features = ["dynamic_linking", "wayland"] }
bevy_prototype_lyon = "0.9.0"
strum = { version = "0.25", features = ["derive"] }
# chrono = "0.4.26"
num-traits = "0.2.15"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies.chrono]
version = "0.4.26"
default-features = false
features = [
	"std"
]

[dependencies.bevy]
version = "0.11.0"
# Disable the default features if there are any that you do not want
default-features = false
features = [
  # These are the default features:
  # (re-enable whichever you like)

  # Bevy functionality:
  "bevy_asset",         # Assets management
  "bevy_audio",         # Builtin audio
  # "bevy_gilrs",         # Gamepad input support
  # "bevy_scene",         # Scenes management
  "bevy_winit",         # Window management
  "bevy_render",        # Rendering framework core
  "bevy_core_pipeline", # Common rendering abstractions
  "bevy_sprite",        # 2D (sprites) rendering
  # "bevy_pbr",           # 3D (physically-based) rendering
  # "bevy_gltf",          # GLTF 3D assets format support
  "bevy_text",          # Text/font rendering
  # "bevy_ui",            # UI toolkit
  # "animation",          # Animation support
  # "tonemapping_luts",   # Support different camera Tonemapping modes (embeds extra data)
  # "filesystem_watcher", # Asset hot-reloading
  # "x11",                # Linux: Support X11 windowing system
  # "android_shared_stdcxx", # For Android builds, use shared C++ library

  # File formats:
  "png",    # PNG image format for simple 2D images
  # "hdr",    # HDR images
  # "ktx2",   # Preferred format for GPU textures
  # "zstd",   # ZSTD compression support in KTX2 files
  "vorbis", # Audio: OGG Vorbis

  # These are other features that may be of interest:
  # (add any of these that you need)

  # Bevy functionality:
  "wayland",              # Linux: Support Wayland windowing system
  # "subpixel_glyph_atlas", # Subpixel antialiasing for text/fonts
  # "serialize",            # Support for `serde` Serialize/Deserialize
  # "bevy_dynamic_plugin",  # Support for loading of `DynamicPlugin`s
  # "accesskit_unix",       # AccessKit integration for UI Accessibility

  # File formats:
  # "dds",  # Alternative DirectX format for GPU textures, instead of KTX2
  # "jpeg", # JPEG lossy format for 2D photos
  # "bmp",  # Uncompressed BMP image format
  # "tga",  # Truevision Targa image format
  # "exr",  # OpenEXR advanced image format
  # "basis-universal", # Basis Universal GPU texture compression format
  # "flac", # Audio: FLAC lossless format
  # "mp3",  # Audio: MP3 format (not recommended)
  # "wav",  # Audio: Uncompressed WAV
  # "symphonia-all", # All Audio formats supported by the Symphonia library

  # Development/Debug features:
  "dynamic_linking", # Dynamic linking for faster compile-times
  # "trace",           # Enable tracing for performance measurement
  # "detailed_trace",  # Make traces more verbose
  # "trace_tracy",     # Tracing using `tracy`
  # "trace_chrome",    # Tracing using the Chrome format
  # "wgpu_trace",      # WGPU/rendering tracing
]

