[package]
name = "chess_bevy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chess"
path = "src/main.rs"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy_prototype_lyon = "0.9.0"
strum = { version = "0.25", features = ["derive"] }
num-traits = "0.2.16"


[dependencies.chrono]
version = "0.4.26"
default-features = false
features = [
	"std"
]

[dependencies.bevy]
version = "0.11.0"
# Disable the default features if there are any that you do not want
default-features = false
features = [
  # These are the default features:
  # (re-enable whichever you like)

  # Bevy functionality:
  "bevy_asset",         # Assets management
  "bevy_audio",         # Builtin audio
  "bevy_winit",         # Window management
  "bevy_render",        # Rendering framework core
  "bevy_core_pipeline", # Common rendering abstractions
  "bevy_sprite",        # 2D (sprites) rendering
  "bevy_text",          # Text/font rendering

  # File formats:
  "png",    # PNG image format for simple 2D images
  "vorbis", # Audio: OGG Vorbis

  # Bevy functionality:
  "wayland",              # Linux: Support Wayland windowing system
  # Development/Debug features:
  # "dynamic_linking", # Dynamic linking for faster compile-times
]

# [build-dependencies]
# bevy_prototype_lyon = "0.9.0"
# strum = { version = "0.25", features = ["derive"] }
# num-traits = "0.2.16"
#
#
# [build-dependencies.chrono]
# version = "0.4.26"
# default-features = false
# features = [
# 	"std"
# ]

